--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "gsap": "^3.12.2",
+    "jquery": "^3.7.1",
+    "swiper": "^11.0.2"
   }
 }
