--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.2",
+    "gsap-trial": "^3.12.2",
     "imask": "^7.1.3",
     "jquery": "^3.7.1",
     "swiper": "^11.0.2"
